# service

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  Taskfile.yml  requirements-dev-overrides.txt
.github/workflows/: ci.yml  e2e.yml  frontend-publish.yml  image-build.yml  image-publish.yml  security-scan.yml  service-tests.yml
contracts/: README.md  common-conventions.md  jwt-conventions.md  operational-endpoints.md
contracts/common/: components.yaml
contracts/services/auth-service/: openapi.yaml
contracts/services/concert-service/: openapi.yaml
contracts/services/payment-service/: openapi.yaml
contracts/services/reservation-service/: openapi.yaml
dashboard/: index.html  user.html
docs/architecture/cicd/: README.md
docs/architecture/trace/: README.md  issue-14-pr-notes.md
frontend/: Dockerfile  nginx.conf
frontend/ticketmong-front-fix/: ticketmong-front.html
scripts/: deploy_tag.sh
services/appointment-service/: .gitignore  Dockerfile  requirements.txt
services/appointment-service/app/: auth.py  config.py  kafka.py  main.py  models.py  schemas.py
services/appointment-service/tests/: test_appointments.py
services/auth-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/auth-service/app/: audit.py  config.py  main.py  models.py  observability.py  schemas.py  security.py  seed.py
services/auth-service/tests/: conftest.py  test_auth.py  test_password_verify_benchmark.py  test_pbkdf2_verify_concurrency_benchmark.py
services/concert-service/: Dockerfile  pyproject.toml
services/concert-service/app/: config.py  database.py  exceptions.py  main.py  observability.py
services/concert-service/app/entities/: concerts.py  policies.py  reviews.py  seats.py  showtimes.py  venues.py
services/concert-service/app/metrics/: __init__.py  adapter.py  events.py  labels.py  recorder.py
services/concert-service/app/repositories/: concerts.py  showtimes.py
services/concert-service/app/routers/: public.py
services/concert-service/app/schemas/: common.py  concerts.py  seats.py  showtimes.py
services/concert-service/app/services/: base.py  catalog.py  policies.py  reviews.py  seats.py  serializers.py  showtimes.py  venues.py
services/concert-service/tests/: conftest.py  test_app.py  test_concert_api.py
services/concert-service/tests/integration/: test_api_benchmark.py  test_postgres_repository.py  test_public_api_benchmark.py
services/concert-service/tests/unit/domain/: test_concert_domain_rules.py
services/notification-service/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
services/notification-service/app/: config.py  database.py  main.py  models.py  observability.py  schemas.py  worker.py
services/notification-service/app/consumers/: kafka_consumer.py
services/notification-service/app/metrics/: __init__.py  adapter.py  events.py  labels.py  recorder.py
services/notification-service/app/routers/: notifications.py
services/notification-service/app/services/: notification_service.py
services/notification-service/cmd/server/: main.py
services/notification-service/tests/: conftest.py  test_notifications.py
services/notification-service/tests/integration/: test_api_benchmark.py
services/patient-service/: .dockerignore  Dockerfile  requirements.txt
services/patient-service/app/: auth.py  config.py  main.py  models.py  observability.py  schemas.py
services/patient-service/tests/: test_patients.py
services/payment-service/: Dockerfile  pyproject.toml  requirements.txt
services/payment-service/app/: auth.py  config.py  database.py  kafka.py  main.py  models.py  observability.py  schemas.py  worker.py
services/payment-service/app/metrics/: __init__.py  adapter.py  events.py  recorder.py
services/payment-service/app/services/: payment_events.py  payments.py
services/payment-service/cmd/worker/: main.py
services/payment-service/tests/: conftest.py  test_payment_event_contract.py  test_payments.py
services/payment-service/tests/integration/: test_api_benchmark.py
services/prescription-service/: .dockerignore  Dockerfile  requirements.txt
services/prescription-service/app/: config.py  database.py  main.py  models.py  schemas.py
services/prescription-service/tests/: test_prescriptions.py
services/reservation-service/: Dockerfile  pyproject.toml
services/reservation-service/app/: config.py  database.py  exceptions.py  kafka.py  main.py  observability.py  worker.py
services/reservation-service/app/entities/: policies.py  reservations.py  sales.py
services/reservation-service/app/metrics/: __init__.py  adapter.py  events.py  labels.py  recorder.py
services/reservation-service/app/routers/: dependencies.py  reservations.py
services/reservation-service/app/schemas/: reservations.py
services/reservation-service/app/services/: base.py  reservations.py  sales.py
services/reservation-service/tests/: conftest.py  test_app.py  test_reservation_api.py  test_reservation_services.py
services/reservation-service/tests/integration/: test_api_benchmark.py  test_postgres_repository.py
services/reservation-service/tests/unit/domain/: test_reservation_domain_rules.py
services/ticket-service/: Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
services/ticket-service/app/: auth.py  config.py  database.py  kafka.py  main.py  models.py  s3.py  schemas.py  worker.py
services/ticket-service/app/consumers/: kafka_consumer.py
services/ticket-service/app/metrics/: __init__.py  adapter.py  events.py  labels.py  recorder.py
services/ticket-service/app/routers/: tickets.py
services/ticket-service/app/services/: ticket_service.py
services/ticket-service/tests/: conftest.py  test_tickets.py
services/ticket-service/tests/integration/: test_api_benchmark.py
tests/: README.md  Taskfile.yml
tests/benchmarks/: __init__.py  api_presets.py  query_analysis.py
tests/benchmarks/datasets/: half-year-early-growth.yaml  (+1 more)
tests/docker/: Dockerfile
tests/e2e/: docker-compose.yml
tests/scripts/: api_benchmark_report.py  unit_report_summary.py
(+45 files in other folders)
