[project]
name = "concert-service"
version = "0.1.0"
description = "Concert service FastAPI application"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "fastapi==0.124.0",
    "metrics",
    "middleware",
    "observability",
    "server",
    "uvicorn[standard]==0.38.0",
    "pydantic-settings==2.12.0",
    "sqlalchemy==2.0.45",
    "psycopg[binary]==3.3.2",
    "prometheus-client==0.23.1",
]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "testcontainers>=4.14.2",
]

[tool.uv]
package = false

[tool.uv.sources]
errors = { path = "../../packages/errors", editable = true }
metrics = { path = "../../packages/metrics", editable = true }
middleware = { path = "../../packages/middleware", editable = true }
observability = { path = "../../packages/observability", editable = true }
server = { path = "../../packages/server", editable = true }

[tool.pytest.ini_options]
pythonpath = [".", "../../packages/errors/src"]
