[project]
name = "payment-service"
version = "0.1.0"
description = "Payment service FastAPI application"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "contracts",
    "fastapi==0.124.0",
    "kafka-utils",
    "middleware",
    "observability",
    "server",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.45",
    "psycopg[binary]==3.3.2",
    "prometheus-client==0.23.1",
    "aiokafka==0.12.0",
]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "httpx==0.28.1",
]

[tool.uv]
package = false

[tool.uv.sources]
contracts = { path = "../../packages/contracts", editable = true }
errors = { path = "../../packages/errors", editable = true }
kafka-utils = { path = "../../packages/kafka-utils", editable = true }
metrics = { path = "../../packages/metrics", editable = true }
middleware = { path = "../../packages/middleware", editable = true }
observability = { path = "../../packages/observability", editable = true }
server = { path = "../../packages/server", editable = true }

[tool.pytest.ini_options]
pythonpath = [".", "../../packages/errors/src"]
