[project]
name = "ticket-service"
version = "0.1.0"
description = "Ticket service FastAPI application"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.124.0",
    "contracts",
    "kafka-utils",
    "middleware",
    "observability",
    "server",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.41",
    "aiokafka==0.12.0",
    "boto3==1.38.0",
    "qrcode==8.1",
    "pillow==11.2.1",
    "psycopg[binary]==3.2.9",
    "pydantic==2.13.4",
    "prometheus-client==0.23.1",
]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "anyio==4.13.0",
]

[tool.uv]
package = false

[tool.uv.sources]
contracts = { path = "../../packages/contracts", editable = true }
errors = { path = "../../packages/errors", editable = true }
kafka-utils = { path = "../../packages/kafka-utils", editable = true }
metrics = { path = "../../packages/metrics", editable = true }
middleware = { path = "../../packages/middleware", editable = true }
observability = { path = "../../packages/observability", editable = true }
server = { path = "../../packages/server", editable = true }

[tool.pytest.ini_options]
pythonpath = [".", "../../packages/errors/src"]
